Add variable for 'light-highlight' color

--- a/client/src/assets/_variables.scss
+++ b/client/src/assets/_variables.scss
@@ -6,3 +6,4 @@ $light-button-background: #bbd5db;
 $light-button-text: #000;
 $light-confirm: #00a91f;
 $light-cancel: #f44336;
+$light-highlight: #e0f2fe; // A light sky blue for highlighting selected items or active states
