--- a/client/src/assets/global.scss
+++ b/client/src/assets/global.scss
@@ -36,6 +36,7 @@ body {
   background-color: $light-background;
   color: $light-text;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 20px;
 }
 
 #app {
@@ -54,7 +55,7 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1.25rem;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
@@ -113,7 +114,7 @@ button {
 .three-columns-grid {
   display: grid;
   grid-auto-rows: 1fr;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 3fr 1.5fr;
 }
 
 /* columns */
