--- a/client/src/assets/_variables.scss
+++ b/client/src/assets/_variables.scss
@@ -1,7 +1,7 @@
 // Define light base colors
 $light-background: #f8f8f8;
 $light-text: #333;
-$light-border: #ddd;
+$light-border: #000000;
 $light-button-background: #bbd5db;
 $light-button-text: #000;
 $light-confirm: #00a91f;
